// Copyright 2025 The Tickex Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package tickex.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/tickexvn/tickex/api/gen/go/tickex/v1;tickex";

message TelegramMessageMetadata {
  google.protobuf.Timestamp created_at = 1;
  string author = 2;
}

message TelegramMessage {
  TelegramMessageMetadata metadata = 1;
  string header = 2;
  string body = 3;
  string footer = 4;
}
